API player sorting
